# pyairios

./: .pre-commit-config.yaml  .pylintrc  README.md  TODO  cli.py  pyproject.toml  requirements_test.txt
.github/workflows/: lint.yml  pylint.yml  pypi-publish.yml
cli/: airios_cli.py
src/pyairios/: __init__.py  brdg_02r13.py  client.py  constants.py  data_model.py  device.py  exceptions.py  node.py  properties.py  registers.py  vmd_02rps78.py  vmn_05lm02.py
src/pyairios/models/: brdg_02r13.py  brdg_base.py  factory.py  vmd_02rps78.py  vmd_07rps13.py  vmd_base.py  vmn_05lm02.py
tests/: test_one.py
